name:                haskell-soda
version:             0.1.0.0
synopsis:            Haskell bindings for the Socrata Open Data API (SODA).
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-soda#readme
license:             BSD3
license-file:        LICENSE
author:              Steven W
maintainer:          example@example.com
copyright:           2016 Steven W
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Soda
                     , Query
                     , Datatypes
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , http-conduit
                     , time
  default-language:    Haskell2010

test-suite haskell-soda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       tasty
                     --, Quickcheck
                     , tasty-hunit
                     , tasty-quickcheck
                     , base
                     , haskell-soda
                     , bytestring
                     , http-conduit
                     , time
                     --, HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-soda
