name:                haskell-soda
version:             0.1.0.0
synopsis:            Haskell bindings for the Socrata Open Data API (SODA)
description:         These are Haskell bindings for the Socrata Open Data API (SODA).
homepage:            https://github.com/githubuser/haskell-soda#readme
license:             BSD3
license-file:        LICENSE
author:              Steven W
maintainer:          example@example.com
copyright:           2016 Steven W
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Soda
                     , Query
                     , Datatypes
                     , SodaFunctions
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , time
                     , req
                     , text
                     --, aeson
  default-language:    Haskell2010

test-suite haskell-soda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TestSuite.hs
  other-modules:       QueryTests
                     , SodaTests
  build-depends:       tasty
                     --, Quickcheck
                     --, HUnit
                     , tasty-hunit
                     , tasty-quickcheck
                     , base
                     , haskell-soda
                     , bytestring
                     , req
                     , time
                     , text
                     --, aeson
                     , http-client
                     , http-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-soda
