name:                haskell-soda
version:             0.1.0.0
synopsis:            Haskell bindings for the Socrata Open Data API (SODA)
description:         These are Haskell bindings for the Socrata Open Data API (SODA).
homepage:            https://github.com/githubuser/haskell-soda
license:             MIT
license-file:        LICENSE.md
author:              Steven W
maintainer:          StevenW.Info@gmail.com
copyright:           2016 Steven W
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Soda
                     , Query
                     , Datatypes
                     , SodaFunctions
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , time
                     , req
                     , text
                     , aeson
                     , vector
                     , unordered-containers
  default-language:    Haskell2010

test-suite haskell-soda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TestSuite.hs
  other-modules:       QueryTests
                     , SodaTests
                     , DatatypeTests
                     , SodaFunctionTests
  build-depends:       tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , base
                     , haskell-soda
                     , bytestring
                     , req
                     , time
                     , text
                     , http-client
                     , http-types
                     , aeson
                     , vector
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-soda
